test/simple/typeerrors/Examples/FbLeft.hs
module FbLeft where

f x y    = x
f 0 a    = a
f 3 True = 5
